--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-------SEO-->
+    <!-------SEO------>
     <meta name="description" content="calculo de impuestos sii">
     <meta name="keywords" content="sii,calculo,de,impuestos">
     
@@ -23,7 +23,7 @@
 <body>
 <!-- As a link -->
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="vamosquesepuede.html" > SII</a>
+    <a class="navbar-brand" href="index.html" > SII</a>
   </nav>
   
   <!-- As a heading -->
@@ -77,7 +77,7 @@
           <div class="col">
               
             <h3 id="total1"></h3>
-            <p>total IVA = IVA compra (-) IVA venta </p>
+            <p>total IVA = IVA compra - IVA venta </p>
           </div>
           <div class="col">
            <br>
@@ -92,9 +92,6 @@
 
 
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
 
         <footer>
 
